# artha

./: .cloudstorageignore  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  README.md  artha.py  pyproject.toml  setup.ps1  setup.sh
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/agents/: artha-work-enterprise.md  artha-work-msft.md  artha-work.md
.github/workflows/: ci.yml  pii-check.yml  work-tests.yml
archive/: bkp-rst.md
briefings/: 2026-03-08.md  2026-03-09.md  2026-03-10.md  2026-03-11.md
config/: Artha.core.md  actions.yaml  artha_config.yaml  bootstrap-interview.md  briefing-formats.md  career_portals.yaml  channels.example.yaml  commands.md  connectors.yaml  contacts.md.age  domain_registry.yaml  glossary.md  guardrails.yaml  hermes_context_allowlist.yaml  implementation_status.yaml  lint_rules.yaml  memory.yaml  middleware.yaml  observability.md  occasions.md  patterns.yaml  quality_gates.yaml  registry.md  routing.example.yaml  settings.example.md  signal_routing.yaml  skills.yaml  sla.yaml  state_registry.yaml  user_context.yaml.example  user_profile.example.yaml  user_profile.schema.json  user_profile.starter.yaml
config/agents/: artha-work-enterprise.md  artha-work-msft.md  artha-work.md  schedules.yaml  work_refresh_tools.yaml
config/prompt-overlays/: README.md
config/workflow/: README.md  connect-verify.md  fetch.md  finalize.md  preflight.md  process.md  reason.md
docs/: actions.md  arch-review-2026-04-08.md  backup.md  channels.md  connectors.md  cross-platform-git-setup.md  domains.md  google-oauth-setup.md  plugins.md  quickstart.md  security.md  skills.md  supported-clis.md  sync-conflicts.md  troubleshooting.md  work-os.md
fonts/: README.md
prompts/: README.md  boundary.md  business.md  calendar.md  career_search.md  caregiving.md  comms.md  community.md  digital.md  employment.md  estate.md  finance.md  goals.md  health.md  home.md  immigration.md  insurance.md  kids.md  learning.md  pets.md  shopping.md  social.md  travel.md  vehicle.md  wellness.md  work-boundary.md  work-calendar.md  work-career.md  work-comms.md  work-notes.md  work-people.md  work-performance.md  work-products.md  work-projects.md  work-sources.md
scripts/: _bootstrap.py  _mark_tasks_done.py  action_bridge.py  action_composer.py  action_executor.py  action_orchestrator.py  action_queue.py  action_rate_limiter.py  agent_manager.py  agent_scheduler.py  artha-vault-watchdog.service  artha-vault-watchdog.timer  artha_context.py  artha_engine.py  attachment_router.py  audit_compliance.py  auto_archive_briefs.py  backup.py  bootstrap_memory.py  bootstrap_seeds.yaml  briefing_adapter.py  calendar_writer.py  canvas_fetch.py  career_apply.py  career_docx_generator.py  career_docx_visual_google.py  career_prep.py  career_search_view.py  channel_listener.py  channel_push.py  checkpoint.py  coaching_engine.py  com.artha.vault-watchdog.plist  context_offloader.py  correction_feeder.py  cost_tracker.py  dashboard_view.py  decision_tracker.py  deep_mail_review.py  deep_mail_review2.py  (+109 more)
scripts/actions/: __init__.py  apple_reminders_sync.py  base.py  calendar_create.py  calendar_modify.py  email_reply.py  email_send.py  instruction_sheet.py  reminder_create.py  slack_send.py  todo_sync_action.py  todoist_sync.py  whatsapp_cloud_send.py  whatsapp_send.py
scripts/agents/: __init__.py  capital_agent.py  career_search_agent.py  logistics_agent.py  readiness_agent.py  tribe_agent.py
scripts/backfill/: __init__.py  backfill_runner.py  cross_reference.py  scrape_parser.py
scripts/channel/: __init__.py  _lock.py  audit.py  catchup.py  formatters.py  handlers.py  llm_bridge.py  m2m_handler.py  router.py  security.py  stage.py  state_readers.py
scripts/channels/: __init__.py  base.py  discord.py  registry.py  slack.py  telegram.py
scripts/connectors/: ado_workitems.py  api_discovery.py  apple_health.py  apple_reminders.py  base.py  caldav_calendar.py  canvas_lms.py  google_calendar.py  google_email.py  homeassistant.py  imap_email.py  imessage_local.py  msgraph_calendar.py  msgraph_email.py  msgraph_sharepoint.py  onenote.py  outlookctl_bridge.py  plaid_connector.py  reddit.py  rss_feed.py  slack.py  todoist.py  (+2 more)
specs/: README.md  act-reloaded.md  act.md  actions-reloaded.md  agentic-improve.md  agentic-reloaded.md  ai-posts.md  artha-prd.md  artha-tasks.md  artha-tech-spec.md  artha-ux-spec.md  conversational-bridge.md  deep-agents.md  dual-setup.md  enhance.md  goals-reloaded.md  improve.md  iot.md  pay-debt.md  remediation.md  skills-reloaded.md  standardization.md  supercharge-reloaded.md  tasks.md  util.md  vm-hardening.md  work-int.md  work.md
templates/: cv-template-visual.html  cv-template.html
tests/: conftest.py  pii_test_data.txt  test_career_content.py  test_career_search.py  test_dq_gate.py  test_kb_lint.py  test_memory_system.py  test_precompute.py  test_signal_consolidation.py
(+523 files in other folders)
